--- a/HW_2/index.html
+++ b/HW_2/index.html
@@ -18,8 +18,12 @@
     История письменности — это история эволюции эстетических понятий, развивающихся
     в рамках технических навыков, скорости передачи информации и материальных ограничений
     человека, времени и пространства. Стиль письма, обычно описываемый как шрифт, 
-    рука или алфавит.<br>
+    рука или алфавит.
+</p>
     
+<img src="https://static.tildacdn.com/tild3764-3163-4665-a139-653733626263/DSCF6186.jpg" alt="Каллиграфия">
+
+<p>
     Современная каллиграфия довольно разнообразна — от бытовых рукописных надписей 
     на открытках до высокого искусства, в котором экспрессия написанного рукой знака 
     не всегда рождает чёткие буквенные формы. Классическая каллиграфия значительно 
@@ -34,7 +38,7 @@
      в качестве оформления, в различных характеристиках, свидетельствах о рождении
       и в других документах, где предполагается писать от руки.
 </p>
-<img src="https://static.tildacdn.com/tild3764-3163-4665-a139-653733626263/DSCF6186.jpg" alt="Пример каллиграфии">
+<img src="img/lalala.jpg" alt="Пример каллиграфии">
 <h2>Направления в каллиграфии</h2>
 <ul>
     <li>Копперплейт</li>
