--- a/HW_2/index.html
+++ b/HW_2/index.html
@@ -38,7 +38,7 @@
      в качестве оформления, в различных характеристиках, свидетельствах о рождении
       и в других документах, где предполагается писать от руки.
 </p>
-<img src="img/lalala.jpg" alt="Пример каллиграфии">
+<img src="img/934C2F5E-9199-492A-A4DA-7BFC984148F6.jpeg" alt="Пример каллиграфии">
 <h2>Направления в каллиграфии</h2>
 <ul>
     <li>Копперплейт</li>
@@ -58,7 +58,7 @@
     <li>Перьевая ручка</li>
     <li>Parallel Pen</li>
  </ul>
- <p>Существует несколько школ, обущающих каллиграфии</p>
+ <h2>Существует несколько школ, обущающих каллиграфии</h2>
  <ul>
     <li> <a href="https://figaro-studio.ru">Figaro</a></li>
     <li><a href="https://apt17.ru">Apt17</a></li>
