--- a/HW_2/index.html
+++ b/HW_2/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Каллиграфия</title>
     <link rel="stylelesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
 <h1>Каллиграфия</h1>
@@ -13,8 +16,10 @@
     Каллигра́фия (от греч. καλλιγραφία — «красивое письмо») — одна из отраслей 
     изобразительного искусства. Ещё каллиграфию часто называют искусством красивого 
     письма. Современное определение каллиграфии звучит следующим образом: 
-    «искусство оформления знаков в экспрессивной, гармоничной и искусной манере».<br>
+    «искусство оформления знаков в экспрессивной, гармоничной и искусной манере».
+</p>
 
+<p>
     История письменности — это история эволюции эстетических понятий, развивающихся
     в рамках технических навыков, скорости передачи информации и материальных ограничений
     человека, времени и пространства. Стиль письма, обычно описываемый как шрифт, 
@@ -29,8 +34,10 @@
     не всегда рождает чёткие буквенные формы. Классическая каллиграфия значительно 
     отличается от шрифтовых работ и нестандартных рукописных форм, хотя каллиграф должен 
     уметь делать и то, и другое; буквы сложились в такие формы исторически, но при этом 
-    они текучи и спонтанны и всегда рождаются в момент письма. <br>
-    
+    они текучи и спонтанны и всегда рождаются в момент письма.
+</p>
+
+<p>
     Сейчас каллиграфия существует в основном в форме пригласительных открыток 
     и свадебных поздравлений, а также в граффити, шрифтах и рукописных логотипах, 
     в религиозном искусстве, графическом дизайне, в высеченных надписях на камнях
