--- a/HW_2/index.html
+++ b/HW_2/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Каллиграфия</title>
-    <link rel="stylelesheet" href="index.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
@@ -57,20 +57,20 @@
     <li>Вязь</li>
 </ul>
 <h2>Интсрументы для каллиграфии</h2>
- <ul>
+<ul>
     <li>Остроконечное перо</li>
     <li>Кисть</li>
     <li>Брашпен</li>
     <li>Ширококонечное перо</li>
     <li>Перьевая ручка</li>
     <li>Parallel Pen</li>
- </ul>
- <h2>Существует несколько школ, обущающих каллиграфии</h2>
- <ul>
+</ul>
+<h2>Существует несколько школ, обущающих каллиграфии</h2>
+<ul>
     <li> <a href="https://figaro-studio.ru">Figaro</a></li>
     <li><a href="https://apt17.ru">Apt17</a></li>
     <li><a href="https://kaplanschool.ru">Kaplan</a></li>
     <li><a href="https://rvvlada.ru">Влада Ружицкая</a></li>
- </ul>
+</ul>
 </body>
 </html>
